Work reports list update

--- a/src/main/frontend/src/app/project-details/project-details.template.html
+++ b/src/main/frontend/src/app/project-details/project-details.template.html
@@ -1,6 +1,5 @@
 <section>
-  <div class="modal fade">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog">
         <div class="modal-header">
           <h3 class="modal-title" ng-show="!pdCtrl.projectId">New project</h3>
           <h3 class="modal-title" ng-show="pdCtrl.projectId">Project edition</h3>
@@ -86,5 +85,4 @@
           </button>
         </div>
     </div>
-  </div>
 </section>
