log-calendar logix fixes

--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -7,7 +7,7 @@
             type="text"
             class="form-control"
             uib-datepicker-popup
-            ng-model="lcCtrl.fliterCriteria.startDateOptions"
+            ng-model="lcCtrl.fliterCriteria.startDate"
             is-open="lcCtrl.startDatePickerOpened"
             datepicker-options="lcCtrl.startDateOptions"
             close-text="Close"
