--- a/src/main/frontend/src/app/shared/directives/multi-employees-select/multi-employees-select.template.html
+++ b/src/main/frontend/src/app/shared/directives/multi-employees-select/multi-employees-select.template.html
@@ -5,7 +5,7 @@
   >
     <span>{{ employee.name }} </span>
     <i
-      class="glyphicon glyphicon-remove"
+      class="glyphicon glyphicon-trash"
       ng-click="deleteEmployee($index, $model)"
       uib-tooltip="Delete employee"
     ></i>
