--- a/src/main/frontend/src/app/shared/directives/multi-item-select/multi-item-select.template.html
+++ b/src/main/frontend/src/app/shared/directives/multi-item-select/multi-item-select.template.html
@@ -5,7 +5,7 @@
   >
     <span>{{ item.name }} </span>
     <i
-      class="glyphicon glyphicon-remove"
+      class="glyphicon glyphicon-trash"
       ng-click="deleteItem($index, $model)"
       uib-tooltip="Delete item"
     ></i>
