--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -7,7 +7,7 @@
     <form name="employeeForm">
       <div
         class="form-group"
-        ng-class="{'has-error': employeeForm.username.$touched && employeeForm.username.$invalid}"
+        ng-class="{'has-error': employeeForm.username.$invalid && (employeeForm.username.$touched || employeeForm.$submitted)}"
       >
         <label for="username">Username</label>
         <input
@@ -23,14 +23,14 @@
         />
         <span
           class="help-block"
-          ng-show="employeeForm.username.$touched && employeeForm.username.$invalid"
+          ng-show="employeeForm.username.$invalid && (employeeForm.username.$touched || employeeForm.$submitted)"
           >Username is required and needs to have between 2 and 32
           characters.</span
         >
       </div>
       <div
         class="form-group"
-        ng-class="{'has-error': employeeForm.name.$touched && employeeForm.name.$invalid}"
+        ng-class="{'has-error': employeeForm.name.$invalid && (employeeForm.name.$touched || employeeForm.$submitted)}"
       >
         <label for="name">Name</label>
         <input
@@ -45,13 +45,13 @@
         />
         <span
           class="help-block"
-          ng-show="employeeForm.name.$touched && employeeForm.name.$invalid"
+          ng-show="employeeForm.name.$invalid && employeeForm.name.$touched"
           >Name is required and needs to have between 2 and 32 characters.</span
         >
       </div>
       <div
         class="form-group"
-        ng-class="{'has-error': employeeForm.surname.$touched && employeeForm.surname.$invalid}"
+        ng-class="{'has-error': employeeForm.surname.$invalid && (employeeForm.surname.$touched || employeeForm.$submitted)}"
       >
         <label for="surname">Surname</label>
         <input
@@ -66,14 +66,14 @@
         />
         <span
           class="help-block"
-          ng-show="employeeForm.surname.$touched && employeeForm.surname.$invalid"
+          ng-show="employeeForm.surname.$invalid && (employeeForm.surname.$touched || employeeForm.$submitted)"
           >Surname is required and needs to have between 2 and 32
           characters.</span
         >
       </div>
       <div
         class="form-group"
-        ng-class="{'has-error': employeeForm.email.$touched && employeeForm.email.$invalid}"
+        ng-class="{'has-error': employeeForm.email.$invalid && (employeeForm.email.$touched || employeeForm.$submitted)}"
       >
         <label for="email">Email</label>
         <input
@@ -86,7 +86,7 @@
         />
         <span
           class="help-block"
-          ng-show="employeeForm.email.$touched && employeeForm.email.$invalid"
+          ng-show="employeeForm.email.$invalid && (employeeForm.email.$touched || employeeForm.$submitted)"
           >Email is required and needs to be a valid email address.</span
         >
       </div>
@@ -94,7 +94,7 @@
         <div class="panel-body">
           <div
             class="form-group"
-            ng-class="{'has-error': employeeForm.password.$touched && employeeForm.password.$invalid}"
+            ng-class="{'has-error': employeeForm.password.$invalid && (employeeForm.password.$touched || employeeForm.$submitted)}"
           >
             <label for="password">Password</label>
             <input
@@ -109,14 +109,14 @@
             />
             <span
               class="help-block"
-              ng-show="employeeForm.password.$touched && employeeForm.password.$invalid"
+              ng-show="employeeForm.password.$invalid && (employeeForm.password.$touched || employeeForm.$submitted)"
               >Password is required and needs to have between 8 and 64
               characters.</span
             >
           </div>
           <div
             class="form-group"
-            ng-class="{'has-error': employeeForm.password.$touched && employeeForm.confirmPassword.$touched && edCtrl.employee.password != edCtrl.confirmPassword}"
+            ng-class="{'has-error': ((employeeForm.password.$touched && employeeForm.confirmPassword.$touched) || employeeForm.$submitted) && edCtrl.employee.password != edCtrl.confirmPassword}"
           >
             <label for="confirmPassword">Confirm password</label>
             <input
@@ -129,7 +129,7 @@
             />
             <span
               class="help-block"
-              ng-show="employeeForm.password.$touched && employeeForm.confirmPassword.$touched && edCtrl.employee.password != edCtrl.confirmPassword"
+              ng-show="((employeeForm.password.$touched && employeeForm.confirmPassword.$touched) || employeeForm.$submitted) && edCtrl.employee.password != edCtrl.confirmPassword"
               >Passwords needs to be the same.</span
             >
           </div>
@@ -146,7 +146,7 @@
       </div>
       <div
         class="form-group"
-        ng-class="{'has-error': !edCtrl.employee.supervisorId || !edCtrl.employee.supervisorName}"
+        ng-class="{'has-error': employeeForm.supervisor.$invalid && (employeeForm.supervisor.$touched || employeeForm.$submitted)}"
       >
         <label>Supervisor</label>
         <item-select
@@ -154,11 +154,13 @@
           model-id="edCtrl.employee.supervisorId"
           placeholder="supervisor"
           provider="edCtrl.provideEmployees(request)"
+          name="supervisor"
+          required="true"
         >
         </item-select>
         <span
           class="help-block"
-          ng-show="!edCtrl.employee.supervisorId || !edCtrl.employee.supervisorName"
+          ng-show="employeeForm.supervisor.$invalid && (employeeForm.supervisor.$touched || employeeForm.$submitted)"
           >Supervisor is required.</span
         >
       </div>
@@ -181,8 +183,7 @@
     <button
       class="btn btn-primary"
       type="button"
-      ng-click="edCtrl.save()"
-      ng-disabled="employeeForm.$invalid || !edCtrl.employee.role || !edCtrl.employee.supervisorId"
+      ng-click="edCtrl.save(employeeForm)"
     >
       Save
     </button>
