supervisors endpoint & select

--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -154,7 +154,7 @@
           model="edCtrl.employee.supervisorName"
           model-id="edCtrl.employee.supervisorId"
           placeholder="supervisor"
-          provider="edCtrl.provideEmployees(request)"
+          provider="edCtrl.provideSupervisors(request)"
           name="supervisor"
           required="true"
         >
