Revert "Revert "Mk branchv2""

--- a/src/main/frontend/src/app/employees-list/employees-list.template.html
+++ b/src/main/frontend/src/app/employees-list/employees-list.template.html
@@ -91,7 +91,7 @@
           <td td-ul list="employee.projects"></td>
           <td class="text-center">
             <span
-              ng-clik="elCtrl.openEmployeeModal(employee.id)"
+              ng-click="elCtrl.openEmployeeModal(employee.id)"
               uib-tooltip="Edit employee"
               ><i class="glyphicon glyphicon-pencil"></i
             ></span>
