--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -83,6 +83,7 @@
           placeholder="email"
           ng-model="edCtrl.employee.email"
           required
+          disabled="edCtrl.employeeId"
         />
         <span
           class="help-block"
