Revert "Employees fixed"

--- a/src/main/frontend/src/app/report-details/report-details.template.html
+++ b/src/main/frontend/src/app/report-details/report-details.template.html
@@ -99,8 +99,8 @@
             placeholder="hours number"
             ng-model="rdCtrl.report.hoursNumber"
             required
-            min="0"
-            max="8"
+            ng-min="0"
+            ng-max="8"
           />
           <span class="input-group-addon">h</span>
         </div>
