--- a/src/main/frontend/src/app/projects-list/projects-list.template.html
+++ b/src/main/frontend/src/app/projects-list/projects-list.template.html
@@ -2,23 +2,15 @@
   <form name="employeesSearchForm" class="panel panel-default">
     <div class="panel-heading">
       <div class="row">
-        <div class="col-sm-1 col-md-offset-2 margin-top ">
-            <span ng-click="plCtrl.filterCriteria.sorted = 'ASC'; plCtrl.reloadTable()" uib-tooltip="Order ASC">
-                <i class="glyphicon glyphicon-triangle-top"></i>
-            </span>
-            <span ng-click="plCtrl.filterCriteria.sorted = 'DESC'; plCtrl.reloadTable()" uib-tooltip="Order DESC">
-                <i class="glyphicon glyphicon-triangle-bottom"></i>
-            </span>
+        <div class="col-md-4 col-md-offset-3">
+          <multi-item-select
+            model="plCtrl.filterCriteria.projects"
+            placeholder="project name"
+            provider="plCtrl.provideProjects(request)"
+          >
+          </multi-item-select>
         </div>
-        <div class="col-sm-5 col-xs-6">
-            <multi-item-select
-              model="plCtrl.filterCriteria.projects"
-              placeholder="project name"
-              provider="plCtrl.provideProjects(request)"
-            >
-            </multi-item-select>
-        </div>
-        <div class="btn-group" class="col-sm-3">
+        <div class="btn-group">
             <button class="btn btn-primary" ng-click="plCtrl.search()">
               <span>Search </span>
               <small><i class="glyphicon glyphicon-search"></i></small>
@@ -35,14 +27,13 @@
       <table ng-table="plCtrl.projectsTable"
           class="table table-bordered table-striped margin-bottom"
           template-pagination="custom/pager"
-             style="table-layout: fixed"
         >
         <thead>
           <colgroup>
-            <col class="col-sm-1 col-xs-1">
-            <col class="col-sm-3 col-xs-2">
-            <col class="col-sm-7 col-xs-6">
-            <col class="col-sm-1 col-xs-2">
+            <col class="col-xs-1">
+            <col class="col-xs-3">
+            <col class="col-xs-7">
+            <col class="col-xs-1">
           </colgroup>
           <th>#</th>
           <th>Name</th>
@@ -55,8 +46,7 @@
         </tr>
         </tbody>
         <tbody>
-          <tr ng-repeat="project in $data"
-              style="word-wrap: break-word">
+          <tr ng-repeat="project in $data">
             <td class="text-center">
               {{ (params.page() - 1) * params.count() + $index + 1 }}
             </td>
