employees-list improvements

--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -152,7 +152,7 @@
       >
         <label>Supervisor</label>
         <item-select
-          model="edCtrl.employee.supervisorName"
+          model="edCtrl.employee.supervisorFullname"
           model-id="edCtrl.employee.supervisorId"
           placeholder="supervisor"
           provider="edCtrl.provideSupervisors(request)"
