disabling multi-item-select

--- a/src/main/frontend/src/app/shared/directives/multi-item-select/multi-item-select.template.html
+++ b/src/main/frontend/src/app/shared/directives/multi-item-select/multi-item-select.template.html
@@ -8,6 +8,7 @@
       class="glyphicon glyphicon-trash"
       ng-click="deleteItem($index, $model)"
       uib-tooltip="Delete item"
+      ng-show="!disabled"
     ></i>
   </div>
   <ui-select
