--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -1,7 +1,15 @@
 <section>
   <div class="modal-header">
-    <h3 class="modal-title" ng-if="!edCtrl.employeeId">New employee</h3>
-    <h3 class="modal-title" ng-if="edCtrl.employeeId">Employee edition</h3>
+    <h3 class="modal-title" ng-if="!edCtrl.employeeId">
+      <small><i class="glyphicon glyphicon-user"></i></small
+      ><span> New employee</span>
+    </h3>
+    <h3 class="modal-title" ng-if="edCtrl.employeeId">
+      <small><i class="glyphicon glyphicon-user"></i></small
+      ><span>
+        Employee <strong>{{ edCtrl.employee.username }}</strong> edition
+      </span>
+    </h3>
   </div>
   <div class="modal-body">
     <form name="employeeForm">
