--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -6,7 +6,7 @@
     </h3>
     <h3 class="modal-title" ng-if="edCtrl.employeeId">
       <small><i class="glyphicon glyphicon-user"></i></small
-      ><span>
+      ><span></span>
         Employee <strong>{{ edCtrl.employee.username }}</strong> edition
       </span>
     </h3>
@@ -99,12 +99,18 @@
           ng-model="edCtrl.employee.email"
           required
           ng-if="!edCtrl.employeeId"
+          unique-email
         />
         <p ng-if="edCtrl.employeeId">{{ edCtrl.employee.email }}</p>
         <span
           class="help-block"
           ng-if="employeeForm.email.$invalid && (employeeForm.email.$touched || employeeForm.$submitted)"
           >Email is required and needs to be a valid email address.</span
+        >
+        <span
+          class="help-block"
+          ng-if="employeeForm.email.$error.uniqueEmail && (employeeForm.email.$touched || employeeForm.$submitted)"
+          >Email needs to be unique.</span
         >
       </div>
       <div class="panel panel-default" ng-if="!edCtrl.employeeId">
