--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -6,7 +6,7 @@
     </h3>
     <h3 class="modal-title" ng-if="edCtrl.employeeId">
       <small><i class="glyphicon glyphicon-user"></i></small
-      ><span></span>
+      ><span>
         Employee <strong>{{ edCtrl.employee.username }}</strong> edition
       </span>
     </h3>
@@ -104,7 +104,7 @@
         <p ng-if="edCtrl.employeeId">{{ edCtrl.employee.email }}</p>
         <span
           class="help-block"
-          ng-if="employeeForm.email.$invalid && (employeeForm.email.$touched || employeeForm.$submitted)"
+          ng-if="employeeForm.email.$error.email && (employeeForm.email.$touched || employeeForm.$submitted)"
           >Email is required and needs to be a valid email address.</span
         >
         <span
